--- a/index.html
+++ b/index.html
@@ -1,22 +1,98 @@
 <!DOCTYPE html>
+
 <html lang="es">
+
 <meta charset="utf-8">
+
 <head>
 	<title>Retrospect</title>
 	<link rel="stylesheet" type="text/css" href="./css/styles.css">
 	<link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
+	<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="./images/favicon.ico" type="image/x-icon">
+
+	<style type="text/css">
+		a {
+		text-decoration: none;
+		}
+		ul {
+			list-style: none;
+		}
+	</style>
 </head>
+
 <body>	
+	
 	<section id="container">
+		
 		<section id="banner">
 		</section>
+
 		<section id="wall">
-				<header>
+
+			<header>
+				<div class="contheader">
 					<h1>RETROSPECT</h1>
+				</div>
+
+				<div class="contheader2">
 					<span id="menu">MENU</span>
-				</header>
+				</div>
+			</header>
+
+			<section id="iniciodiam">
+				<img src="https://image.flaticon.com/icons/png/512/290/290009.png" id="diamond">
+				<h2>ETIAM ADIPISCING</h2>
+				<span>MAGNA FEUGIAT LOREM DOLOR EGESTAS</span>
+				<ul id="listbutton">
+					<li>
+						<a href="#" id="botonv">LEARN MORE</a>
+					</li>
+				</ul>
+				
+			</section>
+			
+			<section id="paragraphs">
+				<article id="paragraph1">
+					<div id="text1">
+						<h2>INTEGER VITAE LIBERO ACRISUS EGESTAS PLACERAT SOLLICITUDIN</h2>
+						<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+						<a href="#" class="boton2">MORE</a>
+					</div>
+					<img src="https://templated.co/items/demos/retrospect/images/pic01.jpg">
+				</article>
+
+				<article id="paragraph2">
+					<div id="text2">
+						<h2>INTEGER VITAE LIBERO ACRISUS EGESTAS PLACERAT SOLLICITUDIN</h2>
+						<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+						<a href="#" class="boton2">MORE</a>
+					</div>
+					<img src="https://templated.co/items/demos/retrospect/images/pic02.jpg">
+				</article>
+			</section>
+
+			<section id="demoimg">
+
+				<h2>ALIQUAM BLANDIT MAURIS</h2>
+				<span>IPSUM DOLOR TEMPUS COMMODO TURPIS ADIPISCING TEMPOR PLACERAT SED AMET ACCUMSAN</span>
+				<div id="images">
+					<img src="https://templated.co/items/demos/retrospect/images/pic03.jpg">
+					<img src="https://templated.co/items/demos/retrospect/images/pic04.jpg">
+					<img src="https://templated.co/items/demos/retrospect/images/pic05.jpg">
+					<img src="https://templated.co/items/demos/retrospect/images/pic06.jpg">
+					<img src="https://templated.co/items/demos/retrospect/images/pic07.jpg">
+					<img src="https://templated.co/items/demos/retrospect/images/pic08.jpg">
+					<img src="https://templated.co/items/demos/retrospect/images/pic09.jpg">
+					<img src="https://templated.co/items/demos/retrospect/images/pic10.jpg">
+				</div>
+
+				<a href="#" class="boton3">TEMPUS ALIQUAM</a>
+			</section>
+
 		</section>
 	</section>
 
 </body>
+
 </html>
